crates/oxc_css_parser/tests/recoverable/scss/variables.scss.error.snap
---
source: crates/oxc_css_parser/tests/recoverable.rs
---
error: Sass flag `!global` is disallowed
  ┌─ variables.scss:1:1
  │
1 │ namespace.$member: value !global;
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
